--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+mod_wsgi==4.5.15
 SQLAlchemy==1.1.10
 visitor==0.1.3
 Werkzeug==0.12.2
