--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.2
 Flask-SSLify==0.1.5
+Flask-Table==0.4.1
 Flask-WTF==0.14.2
 gunicorn==19.7.1
 itsdangerous==0.24
